clusters/k3s/apps/automation/wizarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wizarr
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
    - port: 5690
      targetPort: 5690
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: wizarr
  namespace: docker-services
  labels:
    kubernetes.io/service-name: wizarr
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.40
ports:
  - port: 5690
    protocol: TCP
